[project]
name = "agentic-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin O'Brien",email = "kevinob@umich.edu"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "langchain (>=1.1.0,<2.0.0)",
    "langgraph (>=1.0.4,<2.0.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "tavily-python (>=0.7.13,<0.8.0)",
    "chromadb (>=1.3.5,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "langchain-chroma (>=1.0.0,<2.0.0)",
    "langchain-openai (>=1.1.0,<2.0.0)",
    "langchain-tavily (>=0.2.13,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
